Сделал разметку и основные стили фильтра и каталога

--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="format-detection" content="telephone=no">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&amp;subset=cyrillic" rel="stylesheet">
-  <link href="css/normolize.min.css" rel="stylesheet">
+  <link href="css/normalize.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
   <title>Интернет-магазин гаджетов - DEVICE</title>
 </head>
@@ -63,106 +63,165 @@
       </ul>
     </div>
     <!-- КАТАЛОГ -->
-    <div class="catalog">
-      <div class="wrapper__catalog">
-        <div class="catalog__container">
-          <h2 class="wrapper__catalog-title filter-title">Фильтр:</h2>
-          <div class="wrapper__catalog-filter">
-            <div class="catalog-filter__content">
-              <form class="filter" action="#" method="post">
-                <fieldset class="filter__cost-range cost-range">
-                  <legend class="filter__item-title">Стоимость</legend>
-                  <div class="cost-range_range">
-                    <button class="button-min-cost"></button>
-                    <button class="button-max-cost"></button>
-                    <input class="cost-range__input-min-cost" type="text" name="min-cost" placeholder="от 0">
-                    <input class="cost-range__input-max-cost" type="text" name="max-cost" placeholder="до 5000">
-                  </div>
-                </fieldset>
-
-                <fieldset class="filter__color filter-color">
-                  <legend class="filter__item-title">Цвет</legend>
-                  <div class="filter__color-items">
-                    <label class="filter__label" for="color-black"><input class="filter__checkbox_hidden" id="color-black" type="checkbox" name="black">Черный</label>
-                    <label class="filter__label" for="color-white"><input class="filter__checkbox_hidden" id="color-white" type="checkbox" name="white">Белый</label>
-                    <label class="filter__label" for="color-blue"><input class="filter__checkbox_hidden" id="color-blue" type="checkbox" name="blue">Синий</label>
-                    <label class="filter__label" for="color-red"><input class="filter__checkbox_hidden" id="color-red" type="checkbox" name="red">Красный</label>
-                    <label class="filter__label" for="color-rose"><input class="filter__checkbox_hidden" id="color-rose" type="checkbox" name="rose">Розовый</label>
-                  </div>
-                </fieldset>
-
-                <fieldset class="filter__bluetooth">
-                  <legend class="filter__item-title">Bluetooth</legend>
-                  <div class="filter__bluetooth-items">
-                    <label class="filter__label" for="bluetooth_yes"><input class="filter__radio_hidden" id="bluetooth_yes" type="radio" name="bluetooth" checked>Есть</label>
-                    <label class="filter__label" for="bluetooth_no"><input class="filter__radio_hidden" id="bluetooth_no" type="radio" name="bluetooth">Нет</label>
-                  </div>
-                </fieldset>
-                <button class="filter__button button" type="submit">Показать</button>
-              </form>
+    <div class="catalog-top catalog-top__bg-gradient_gray-lightgray">
+      <div class="wrapper__catalog-top">
+        <div class="catalog-top__container">
+          <h2 class="filter-title">Фильтр:</h2>
+          <section class="sorting">
+            <h2 class="sorting__title">Сортировка:</h2>
+            <div class="sorting__buttons sorting-buttons">
+              <a class="sorting-buttons__item" href="#">По цене</a>
+              <a class="sorting-buttons__item" href="#">По типу</a>
+              <a class="sorting-buttons__item" href="#">По популярности</a>
+              <a class="sorting-buttons__item" href="#" aria-label="Сортировка по возрастанию">
+                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="11px" height="10px" viewBox="0 0 11 10" enable-background="new 0 0 11 10" xml:space="preserve">
+                  <polygon fill="#231F20" points="5.5,0 0,10 11,10 "/>
+                </svg>
+              </a>
+              <a class="sorting-buttons__item" href="#" aria-label="Сортировка по убыванию">
+                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="11px" height="10px" viewBox="0 0 11 10" enable-background="new 0 0 11 10" xml:space="preserve">
+                  <polyline fill="#231F20" points="5.5,10 0,0 11,0 "/>
+                </svg>
+              </a>
             </div>
-          </div>
-        </div>
-
-        <div class="catalog__container">
-          <div class="wrapper__catalog-sorting">
-            <section>
-              <div class="sorting">
-                <h2 class="sorting__title">Сортировка:</h2>
-                <div class="sorting__buttons sorting-buttons">
-                  <a class="sorting-buttons__item" href="#">По цене</a>
-                  <a class="sorting-buttons__item" href="#">По типу</a>
-                  <a class="sorting-buttons__item" href="#">По популярности</a>
-                  <a class="sorting-buttons__item" href="#" aria-label="Сортировка по возрастанию">
-                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="11px" height="10px" viewBox="0 0 11 10" enable-background="new 0 0 11 10" xml:space="preserve">
-                      <polygon fill="#231F20" points="5.5,0 0,10 11,10 "/>
-                    </svg>
-                  </a>
-                  <a class="sorting-buttons__item" href="#" aria-label="Сортировка по убыванию">
-                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="11px" height="10px" viewBox="0 0 11 10" enable-background="new 0 0 11 10" xml:space="preserve">
-                      <polyline fill="#231F20" points="5.5,10 0,0 11,0 "/>
-                    </svg>
-                  </a>
-                </div>
-              </div>
-            </section>
-          </div>
-          <div class="wrapper__catalog-main">
-            <div class="catalog__main">
-              <article class="catalog__item catalog-item">
-                <img class="catalog-item__image" src="img/catalog/selfie-stick.jpg" width="360" height="380" alt="Изображение любительской селфи-палки">
-                <h3 class="catalog-item__title">Любительская селфи-палка</h3>
-                <span>500 руб.</span>
-              </article>
-              <article class="catalog__item catalog-item">
-                <img class="catalog-item__image" src="img/catalog/selfie-stick-professional.jpg" width="360" height="380" alt="Изображение профессиональной селфи-палки">
-                <h3 class="catalog-item__title">Профессиональная селфи-палка</h3>
-                <span>1 500 руб.</span>
-              </article>
-              <article class="catalog__item catalog-item">
-                <img class="catalog-item__image" src="img/catalog/selfie-stick-unsinkable.jpg" width="360" height="380" alt="Изображение непотопляемой селфи-палки">
-                <h3 class="catalog-item__title">Непотопляемая селфи-палка</h3>
-                <span>2 500 руб.</span>
-              </article>
-              <article class="catalog__item catalog-item">
-                <img class="catalog-item__image" src="img/catalog/selfie-stick-followme.jpg" width="360" height="380" alt="Изображение селфи-палки «Следуй за мной»">
-                <h3 class="catalog-item__title">Селфи-палка «Следуй за мной»</h3>
-                <span>4 900 руб.</span>
-              </article>
-            </div>
-            <div class="pagination">
-              <ul class="pagination__list">
-                <li class="pagination__item"><a href="#">Назад</a></li>
-                <li class="pagination__item"><a class="pagination__active" href="#">1</a></li>
-                <li class="pagination__item"><a href="#">2</a></li>
-                <li class="pagination__item"><a href="#">3</a></li>
-                <li class="pagination__item"><a href="#">Вперед</a></li>
-              </ul>
-            </div>
-          </div>
+          </section>
         </div>
       </div>
     </div>
+
+<div class="catalog-main catalog-main__bg-gradient_lightgray-white">
+  <div class="wrapper__catalog-main">
+    <div class="catalog-main__container">
+      <form class="filter" action="#" method="post">
+        <fieldset class="filter__section cost-range">
+          <legend class="filter__item-title">Стоимость</legend>
+          <div class="cost-range_range">
+            <button class="button-min-cost"></button>
+            <button class="button-max-cost"></button>
+            <div class="filter__cost-input">
+              <input class="cost-range__input-min-cost" type="text" name="min-cost" placeholder="от 0">
+              <input class="cost-range__input-max-cost" type="text" name="max-cost" placeholder="до 5000">
+            </div>
+          </div>
+        </fieldset>
+
+        <fieldset class="filter__section filter-color">
+          <legend class="filter__item-title filter-color__item-title_margin-bottom">Цвет</legend>
+          <div class="filter__color-items">
+            <input class="filter__checkbox visually-hidden" id="color-black" type="checkbox" name="black">
+            <label class="filter__label filter__checkbox-label" for="color-black">Черный</label>
+
+            <input class="filter__checkbox visually-hidden" id="color-white" type="checkbox" name="white">
+            <label class="filter__label filter__checkbox-label" for="color-white">Белый</label>
+
+            <input class="filter__checkbox visually-hidden" id="color-blue" type="checkbox" name="blue">
+            <label class="filter__label filter__checkbox-label" for="color-blue">Синий</label>
+
+            <input class="filter__checkbox visually-hidden" id="color-red" type="checkbox" name="red">
+            <label class="filter__label filter__checkbox-label" for="color-red">Красный</label>
+
+            <input class="filter__checkbox visually-hidden" id="color-rose" type="checkbox" name="rose">
+            <label class="filter__label filter__checkbox-label" for="color-rose">Розовый</label>
+          </div>
+        </fieldset>
+
+        <fieldset class="filter__section filter__last-section_margin-bottom">
+          <legend class="filter__item-title">Bluetooth</legend>
+          <div class="filter__bluetooth-items">
+            <input class="filter__radio visually-hidden" id="bluetooth_yes" type="radio" name="bluetooth" checked>
+            <label class="filter__label filter__radio-label" for="bluetooth_yes">Есть</label>
+
+            <input class="filter__radio visually-hidden" id="bluetooth_no" type="radio" name="bluetooth">
+            <label class="filter__label filter__radio-label" for="bluetooth_no">Нет</label>
+          </div>
+        </fieldset>
+        <button class="filter__button button" type="submit">Показать</button>
+      </form>
+      <div class="catalog__container">
+        <div class="catalog__main">
+          <article class="catalog__item catalog-item">
+            <div class="catalog-item__inner">
+              <div class="catalog-item__product-picture">
+                <img class="catalog-item__image" src="img/catalog/selfie-stick.jpg" width="360" height="380" alt="Изображение любительской селфи-палки">
+              </div>
+              <div class="catalog-item__product-links">
+                <a class="button catalog-item__cart-link" href="#">В корзину</a>
+                <a class="catalog-item__compare-link" href="">Добавить к сравнению</a>
+              </div>
+            </div>
+            <div class="catalog-item__info">
+              <a class="catalog-item__title-link" href="#">
+                <h3 class="catalog-item__title">Любительская селфи-палка</h3>
+              </a>
+              <span class="catalog-item__price">500 руб.</span>
+            </div>
+          </article>
+          <article class="catalog__item catalog-item">
+            <div class="catalog-item__inner">
+              <div class="catalog-item__product-picture">
+                <img class="catalog-item__image" src="img/catalog/selfie-stick-professional.jpg" width="360" height="380" alt="Изображение профессиональной селфи-палки">
+              </div>
+              <div class="catalog-item__product-links">
+                <a class="button catalog-item__cart-link" href="#">В корзину</a>
+                <a class="catalog-item__compare-link" href="">Добавить к сравнению</a>
+              </div>
+            </div>
+            <div class="catalog-item__info">
+              <a class="catalog-item__title-link" href="#">
+                <h3 class="catalog-item__title catalog-item__width_short">Профессиональная селфи-палка</h3>
+              </a>
+              <span class="catalog-item__price">1 500 руб.</span>
+            </div>
+          </article>
+          <article class="catalog__item catalog-item catalog__last-item_no-margin-bottom">
+            <div class="catalog-item__inner">
+              <div class="catalog-item__product-picture">
+                <img class="catalog-item__image" src="img/catalog/selfie-stick-unsinkable.jpg" width="360" height="380" alt="Изображение непотопляемой селфи-палки">
+              </div>
+              <div class="catalog-item__product-links">
+                <a class="button catalog-item__cart-link" href="#">В корзину</a>
+                <a class="catalog-item__compare-link" href="">Добавить к сравнению</a>
+              </div>
+            </div>
+            <div class="catalog-item__info">
+              <a class="catalog-item__title-link" href="#">
+                <h3 class="catalog-item__title ">Непотопляемая селфи-палка</h3>
+              </a>
+              <span class="catalog-item__price">2 500 руб.</span>
+            </div>
+          </article>
+          <article class="catalog__item catalog-item catalog__last-item_no-margin-bottom">
+            <div class="catalog-item__new-item">New</div>
+            <div class="catalog-item__inner">
+              <div class="catalog-item__product-picture">
+                <img class="catalog-item__image" src="img/catalog/selfie-stick-followme.jpg" width="360" height="380" alt="Изображение селфи-палки «Следуй за мной»">
+              </div>
+              <div class="catalog-item__product-links">
+                <a class="button catalog-item__cart-link" href="#">В корзину</a>
+                <a class="catalog-item__compare-link" href="">Добавить к сравнению</a>
+              </div>
+            </div>
+            <div class="catalog-item__info">
+              <a class="catalog-item__title-link" href="#">
+                <h3 class="catalog-item__title catalog-item__width_short">Селфи-палка «Следуй за мной»</h3>
+              </a>
+              <span class="catalog-item__price">4 900 руб.</span>
+            </div>
+          </article>
+        </div>
+        <div class="pagination">
+          <ul class="pagination__list">
+            <li class="pagination__item"><a href="#">Назад</a></li>
+            <li class="pagination__item"><a class="pagination__active" href="#">1</a></li>
+            <li class="pagination__item"><a href="#">2</a></li>
+            <li class="pagination__item"><a href="#">3</a></li>
+            <li class="pagination__item"><a href="#">Вперед</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
     <!-- ЗАКОНЧИЛСЯ КАТАЛОГ -->
   </main>
 <footer class="wrapper__footer-decoration_background">
