Поправил стили в сортировке

--- a/catalog.html
+++ b/catalog.html
@@ -77,13 +77,13 @@
               <a class="sorting-buttons__item" href="#">По типу</a>
               <a class="sorting-buttons__item" href="#">По популярности</a>
               <a class="sorting-buttons__item" href="#" aria-label="Сортировка по возрастанию">
-                <svg class="sorting-buttons__icon_color" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="11px" height="10px" viewBox="0 0 11 10" enable-background="new 0 0 11 10" xml:space="preserve">
-                  <polygon fill="#231F20" points="5.5,0 0,10 11,10 "/>
+                <svg  version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="11px" height="10px" viewBox="0 0 11 10" enable-background="new 0 0 11 10" xml:space="preserve">
+                  <polygon class="sorting-buttons__icon_color" fill="#231F20" points="5.5,0 0,10 11,10 "/>
                 </svg>
               </a>
               <a class="sorting-buttons__item" href="#" aria-label="Сортировка по убыванию">
-                <svg class="sorting-buttons__icon_color sorting-buttons_icon-active" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="11px" height="10px" viewBox="0 0 11 10" enable-background="new 0 0 11 10" xml:space="preserve">
-                  <polyline fill="#231F20" points="5.5,10 0,0 11,0 "/>
+                <svg  version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="11px" height="10px" viewBox="0 0 11 10" enable-background="new 0 0 11 10" xml:space="preserve">
+                  <polyline class="sorting-buttons__icon_color sorting-buttons_icon-active" fill="#231F20" points="5.5,10 0,0 11,0 "/>
                 </svg>
               </a>
             </div>
