--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </a>
       <form class="header-top__main-search main-search">
         <label class="main-search__icon-search" for="search-input" aria-label="Форма поиска"></label>
-        <input class="main-search__input" id="search-input" type="text" name="main-search" placeholder="Поиск по сайту">
+        <input class="main-search__input" id="search-input" type="search" name="main-search" placeholder="Поиск по сайту">
         <button class="main-search__button" type="submit">Найти</button>
       </form>
       <div class="header-top__user-menu user-menu">
